# try-macro-rs

./: Cargo.toml  README.md
src/: lib.rs
tests/: test.rs
try-macro-proc_macro/: Cargo.toml
try-macro-proc_macro/src/: lib.rs
