[package]
name = "try-macro-proc_macro"
version = "0.1.1"
edition = "2024"

authors = ["A4-Tacks <wdsjxhno1001@163.com>"]
description = "Macro support crate"
license = "MIT"
repository = "https://github.com/A4-Tacks/try-macro-rs"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.40"

[dependencies.syn]
version = "2.0.101"
default-features = false
features = ["full", "printing", "parsing", "proc-macro", "visit-mut"]
